--- a/index.html
+++ b/index.html
@@ -5,8 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
-    
+    <header>
+        <nav>
+            <ul>
+                <li class="list_item"><a href="./index.html">WebStudio</a></li>
+                <li class="list_item"><a href="./index.html">Студія</a></li>
+                <li class="list_item"><a href="./index.html">Портфоліо</a></li>
+                <li class="list_item"><a href="./index.html">Контакти</a></li>
+                <li class="list_item"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li class="list_item"><a href="tel:+38 096 111 11 11">+38 096 111 11 11</a></li>
+            </ul>
+        </nav>
+    </header>
 </body>
 </html>
