finished header and hero

--- a/index.html
+++ b/index.html
@@ -6,19 +6,54 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
+
 </head>
 <body>
     <header>
         <nav>
             <ul>
-                <li class="list_item"><a href="./index.html">WebStudio</a></li>
-                <li class="list_item"><a href="./index.html">Студія</a></li>
-                <li class="list_item"><a href="./index.html">Портфоліо</a></li>
-                <li class="list_item"><a href="./index.html">Контакти</a></li>
-                <li class="list_item"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li class="list_item"><a href="tel:+38 096 111 11 11">+38 096 111 11 11</a></li>
+                <li class="websudio"><a class="web" href="./index.html">Web</a>Sudio</li>
+                <li class="li1"><a class="links"href="./index.html">Студія</a></li>
+                <li class="li2"><a class="links"href="./index.html">Портфоліо</a></li>
+                <li class="li3"><a class="links"href="./index.html">Контакти</a></li>
+                <li class="li4"><a class="links"href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li class="li5"><a class="links"href="tel:+38 096 111 11 11">+38 096 111 11 11</a></li>
             </ul>
         </nav>
     </header>
+    <main>
+        <section class="hero">
+            <img class="heroimage" src="./Bg.png" alt="background_image" >
+            <div class="logo">
+                <h1 class="main_text">Ефективні рішення для вашого бізнесу</h1>
+                <button class="button_">Замовити послугу</button>
+            </div>
+        </section>
+        <section class="uwaga_do_detalei">
+            <p class="headline">УВАГА ДО ДЕТАЛЕЙ</p>
+            <p class="some_text">
+                Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.
+            </p>
+        </section>
+        <section class="punktualnist">
+            <p class="headline">ПУНКТУАЛЬНІСТЬ</p>
+            <p class="some_text">
+                Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.
+            </p>
+        </section>
+        <section class="planuwannya">
+            <p class="headline">ПЛАНУВАННЯ</p>
+            <p class="some_text">
+                Так само консультація з широким активом значною мірою зумовлює.
+            </p>
+        </section>
+        <section class="suchasni_technologii">
+            <p class="headline">СУЧАСНІ ТЕХНОЛОГІЇ</p>
+            <p class="some_text">
+                Значимість цих проблем настільки очевидна, що реалізація планових завдань.
+            </p>
+        </section>
 </body>
 </html>
